bayesboot 0.2
=======================

* bayesboot now warns when the posterior sample contains NAs, NaNs and NULLs.
* plot.bayesboot now correctly resets graph parameters.


bayesboot 0.1
=======================

* Initial release.