@@ -7,6 +7,7 @@ S3method(hdi,density)
 S3method(hdi,matrix)
 S3method(hdi,mcmc.list)
 S3method(plot,bayesboot)
+S3method(print,bayesboot)
 S3method(print,summary.bayesboot)
 S3method(summary,bayesboot)
 export(as.bayesboot)
